examples/ok/stringConcat.k
@Use("java")
public void main(){
    integer integerValue = 5;
    double doubleValue = 2.5;

    String finalResultAsString = "X=" + integerValue + ", Y=" + doubleValue;
    println(finalResultAsString);

    return;
}