examples/error/failBinary.k
@Use("java")
public void main() {
    boolean isActive = true;
    integer salary = 1000;

    integer total = salary + isActive; 

    return;
}